--- a/H8_conclusions.tex
+++ b/H8_conclusions.tex
@@ -11,8 +11,6 @@ This chapter will contain some finals words on the problem definition and the pr
 
 \section{Conclusion}
 
-//TODO
-
 \paragraph{Problem definition} 
 
 The first step in analysing DNA, is to sequence it. This will determine which bases and in which order they are occuring in the DNA. However, the technology of DNA sequencing machines limit us to reads of 75-300 bases long. Therefore, the DNA is multiplied and cut into short pieces before sequencing. If we want to make assumptions about the whole genome, we will need to input a lot of these reads. 
@@ -29,7 +27,11 @@ The idea of this thesis was to implement the Smith-Waterman alignment algorithm 
 
 As a starting point, a software implementation was implemented on the target board.
 
-\paragraph{Speedup}
+//TODO
+
+\paragraph{Hardware speedup}
+
+//TODO
 
 
 
