--- a/thesis.tex
+++ b/thesis.tex
@@ -103,7 +103,7 @@
 
 %informatie over het eindwerk, de promotor, ...
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\opleiding{Electronica}
+\opleiding{Elektronica}
 \afdeling{}
 
 \campus{brugge} %denayer,denayereng,geel,geeleng,gent,ghenteng,groept,groupteng,brugge,brugeseng
