--- a/H1_Inleiding.tex
+++ b/H1_Inleiding.tex
@@ -6,8 +6,6 @@
 
 \chapter{Introduction}
 
-//TODO zoeken voor een goed figuurtje om de tekst wat te breken.
-
 Over the last few decades, biologists have made major steps in trying to understand life; animals, humans, and plants. Since the rise of DNA sequencing techniques, genomics has become an emerging field within biology. However, genomic applications are often very computationally demanding, due to the size of the involved datasets, for example when analyzing the 3 billion base pairs of the human genome.
 
 One fundamental application in genomics is short read genome mapping, which attempts to locate a short read of DNA on the full genome. If enough of such short reads are mapped, some interesting results can be achieved. For example, if enough reads are mapped, we can extrapolate the full genome of the organism. Even the amount of reads in one place (referred to as the reading depth) can give useful information, e.g. the presence of a trisomy of chromosome-21 in Down syndrome patients.
@@ -23,5 +21,5 @@ The further chapters of this thesis are organized as follows:
 \paragraph{chapter \ref{ch:Platforms}:} The theoretical background on existing implementations of the Smith-Waterman algorithm on different kinds of hardware, as well as the hardware selection process.
 \paragraph{chapter \ref{ch:InitDiff}:} A chapter which covers the difficulties I had when learning the required programming techniques, covering High-Level Synthesis and SDSoC. 
 \paragraph{chapter \ref{ch:SoftwareImpl}:} A detailed description of the developed software implementation, as well as the results achieved with this implementation.
-\paragraph{chapter \ref{ch:HardwareImpl}:} //TODO
-\paragraph{chapter \ref{ch:Conclusions}:} //TODO
+\paragraph{chapter \ref{ch:HardwareImpl}:} The analysis of the software implementation and where to accelerate using FPGA hardware. Also, the comparison between the accelerated version and the software version.
+\paragraph{chapter \ref{ch:Conclusions}:} Conclusion and future work.
